Draw card animation

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,8 +68,10 @@
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/VertexColorCycler.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/EnvMapAnimator.cs" />
     <Compile Include="Assets/Scenes/Clash/ClashScript.cs" />
+    <Compile Include="Assets/Scenes/Clash/ClashAnimationQueue.cs" />
     <Compile Include="Assets/Scenes/Clash/ClashAnimation.cs" />
     <Compile Include="Assets/Cards/CrewCard.cs" />
+    <Compile Include="Assets/Animations/NewClass.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TMP_TextSelector_A.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/Benchmark01_UGUI.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/SimpleScript.cs" />
