add button on main screen to start a fandom forge session

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Assets/Cards/CrewCardScript.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/Benchmark03.cs" />
     <Compile Include="Assets/Scenes/Recruiting/CurrentRecruitingAction.cs" />
+    <Compile Include="Assets/MainScreenScript.cs" />
     <Compile Include="Assets/Cards/CrewCardBehavior.cs" />
     <Compile Include="Assets/Scenes/FandomForgePlayer.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TMP_TextInfoDebugTool.cs" />
