--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/VertexColorCycler.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/EnvMapAnimator.cs" />
     <Compile Include="Assets/Scenes/Clash/ClashScript.cs" />
+    <Compile Include="Assets/Cards/CardAnimation.cs" />
     <Compile Include="Assets/Scenes/Clash/ClashAnimationQueue.cs" />
     <Compile Include="Assets/Scenes/Clash/ClashAnimation.cs" />
     <Compile Include="Assets/Scenes/FaceOff/FaceOffDuel.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Assets/Scenes/FandomForge.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/VertexZoom.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/Benchmark02.cs" />
+    <Compile Include="Assets/Cards/CardAnimationType.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TMP_TextSelector_B.cs" />
     <Compile Include="Assets/Scenes/FaceOff/FaceOffPlayer.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/SkewTextExample.cs" />
